force-app/main/default/objects/FSAM_Part_Replacement__c/FSAM_Part_Replacement__c.object-meta.xml
<CustomObject>
    <label>FSAM Part Replacement</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Replacement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSAM Part Replacements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>