force-app/main/default/objects/FSAM_Part_Replacement__c/fields/FSAM_Notes__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Notes__c</fullName>
    <description>Additional information about the part replacement.</description>
    <inlineHelpText>Enter any relevant details about why or how the part was replaced.</inlineHelpText>
    <label>Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>