force-app/main/default/objects/FSAM_Part_Replacement__c/fields/FSAM_Quantity__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number of units of the selected service part used during the replacement.</description>
    <inlineHelpText>Enter the number of units consumed during the service activity.</inlineHelpText>
    <label>Quantity</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>