force-app/main/default/objects/FSAM_Part_Replacement__c/fields/FSAM_Replacement_Date__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Replacement_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date and time when the service part was replaced or consumed.</description>
    <inlineHelpText>Enter the date and time when the part replacement occurred.</inlineHelpText>
    <label>Replacement Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>