force-app/main/default/objects/FSAM_Part_Replacement__c/fields/FSAM_Service_Part__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Service_Part__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Service part used during the repair or maintenance activity.</description>
    <inlineHelpText>Select the spare part that was used for this service request.</inlineHelpText>
    <label>Service Part</label>
    <referenceTo>FSAM_Service_Part__c</referenceTo>
    <relationshipLabel>FSAM Part Replacements</relationshipLabel>
    <relationshipName>FSAM_Part_Replacements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>