force-app/main/default/objects/FSAM_Part_Replacement__c/fields/FSAM_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Service_Request__c</fullName>
    <description>Service request for which the part was replaced or consumed.</description>
    <label>Service Request</label>
    <referenceTo>FSAM_Service_Request__c</referenceTo>
    <relationshipLabel>FSAM Part Replacements</relationshipLabel>
    <relationshipName>FSAM_Part_Replacements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>