force-app/main/default/objects/FSAM_Part_Replacement__c/fields/FSAM_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Total_Cost__c</fullName>
    <description>Calculates the total cost based on the quantity used and unit cost at the time of replacement.</description>
    <formula>FSAM_Quantity__c *  FSAM_Unit_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>