force-app/main/default/objects/FSAM_Part_Replacement__c/fields/FSAM_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Unit_Cost__c</fullName>
    <description>Unit cost of the service part at the time of replacement.</description>
    <inlineHelpText>Enter the unit cost applicable when the part was used.</inlineHelpText>
    <label>Unit Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>