force-app/main/default/objects/FSAM_Part_Replacement__c/validationRules/FSAM_VR_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAM_VR_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>FSAM_Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>FSAM_Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater than zero.</errorMessage>
</ValidationRule>